Adding main file - correction

--- a/HW_sem04(collect_and_mark).ipynb
+++ b/HW_sem04(collect_and_mark).ipynb
@@ -41,7 +41,7 @@
       "metadata": {
         "id": "4lwFTBoP5S1z"
       },
-      "execution_count": 1,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 13,
       "metadata": {
         "id": "x0mQ4d5t44_9"
       },
@@ -79,9 +79,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NTET8clu571R",
-        "outputId": "3321b07f-82c6-44de-d5fd-aa5a356e7a17"
+        "outputId": "d13354f1-99e2-4977-b57d-f1f5a886ae1b"
       },
-      "execution_count": 3,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -91,7 +91,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 14
         }
       ]
     },
@@ -103,7 +103,7 @@
       "metadata": {
         "id": "SCTzpz1T91uc"
       },
-      "execution_count": 4,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -136,9 +136,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dc975d3d-1cc1-4594-e180-1c3b9f2cde45"
+        "outputId": "f616b78d-c599-4cf8-e714-ffd8e3f3dead"
       },
-      "execution_count": 5,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -411,7 +411,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 16
         }
       ]
     },
@@ -436,9 +436,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f58d63b0-c62f-4bfa-c4d9-38c492e72540"
+        "outputId": "d9cc0146-72f5-4b1c-a309-dc7bb281022b"
       },
-      "execution_count": 6,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -609,7 +609,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 17
         }
       ]
     },
@@ -634,9 +634,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "033edfef-eea3-4a3c-93af-7ccebf453dc3"
+        "outputId": "34bcfa9c-725d-4c88-8fa5-49577cd895bf"
       },
-      "execution_count": 7,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -693,7 +693,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 18
         }
       ]
     },
@@ -709,9 +709,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HolbgyZSKwPo",
-        "outputId": "9f98f088-bba8-4464-cf7b-27cd5a4ebe4c"
+        "outputId": "5fa56fa5-84dd-4d30-c0dc-aee3bfb5972f"
       },
-      "execution_count": 8,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1194,7 +1194,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 19
         }
       ]
     },
@@ -1202,13 +1202,13 @@
       "cell_type": "code",
       "source": [
         "# сохранение данных в JSON-файл\n",
-        "with open('total_data.json', 'w') as f:\n",
+        "with open('total_data.json', 'w', encoding='utf-8') as f:\n",
         "    json.dump(total_data, f)"
       ],
       "metadata": {
         "id": "nc7feXdnOPGz"
       },
-      "execution_count": 9,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -1225,9 +1225,9 @@
           "height": 545
         },
         "id": "S1dWkRLbN2V6",
-        "outputId": "c36ecb23-c3ed-4607-e71c-546fbf8e0fb5"
+        "outputId": "8128231f-c856-48e1-e082-8fd80c55996d"
       },
-      "execution_count": 10,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1289,7 +1289,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-df6dc1bd-069a-411b-a50c-abd44ce9d769\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f74bb5f0-b895-4228-9255-e3e0ce35b40f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1423,7 +1423,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-df6dc1bd-069a-411b-a50c-abd44ce9d769')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f74bb5f0-b895-4228-9255-e3e0ce35b40f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1475,12 +1475,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-df6dc1bd-069a-411b-a50c-abd44ce9d769 button.colab-df-convert');\n",
+              "        document.querySelector('#df-f74bb5f0-b895-4228-9255-e3e0ce35b40f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-df6dc1bd-069a-411b-a50c-abd44ce9d769');\n",
+              "        const element = document.querySelector('#df-f74bb5f0-b895-4228-9255-e3e0ce35b40f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1500,8 +1500,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-9385d2d8-4c84-41a1-963e-059713b1aa50\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9385d2d8-4c84-41a1-963e-059713b1aa50')\"\n",
+              "<div id=\"df-600712a6-e777-4acf-b55a-526ba066a8b6\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-600712a6-e777-4acf-b55a-526ba066a8b6')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1620,7 +1620,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-9385d2d8-4c84-41a1-963e-059713b1aa50 button');\n",
+              "        document.querySelector('#df-600712a6-e777-4acf-b55a-526ba066a8b6 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1631,9 +1631,16 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 21
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "7z6emKUuRQs_"
+      }
     },
     {
       "cell_type": "code",
@@ -1645,9 +1652,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gq4nE0LJdSJ_",
-        "outputId": "c43ca1fd-2d9a-476e-e2fa-fc083df78443"
+        "outputId": "6b74d5aa-bf24-421e-c310-0b6d86acf220"
       },
-      "execution_count": 11,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
